compiler-core/src/parse/snapshots/gleam_core__parse__tests__float_empty_exponent.snap
---
source: compiler-core/src/parse/tests.rs
expression: 1.32e
snapshot_kind: text
---
----- SOURCE CODE
1.32e

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ 1.32e
  │ ^^^^^ This float is missing an exponent

Hint: Add an exponent or remove the trailing `e`
