compiler-core/src/parse/snapshots/gleam_core__parse__tests__incomplete_function.snap
---
source: compiler-core/src/parse/tests.rs
expression: fn()
snapshot_kind: text
---
----- SOURCE CODE
fn()

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ fn()
  │ ^^^^ This function does not have a body
